<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.winimpresa.mobile.MainActivity" >

    <LinearLayout 
        
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
         android:background="@android:color/transparent"
        android:layout_weight="1"
        >
    
      <TextView
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#29A3DA"
        android:gravity="center"
        android:textStyle="bold"
        android:shadowColor="#fff"
    	android:shadowDx="-2"
         android:shadowDy="2"
       android:shadowRadius="0.01"
        android:text="@string/benvenute" />
      <TextView
        android:id="@+id/versionApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:textSize="12sp"
        android:textColor="#000"
        android:gravity="center"
       
        
        />
    
    <TextView
        android:id="@+id/infoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="16sp"
        android:textColor="#000"
        android:gravity="center"
        />
      
         

</LinearLayout>

      <LinearLayout 
        
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_weight="3"
        android:padding="10dp"
        
        >
    	
          <ImageView 
           android:layout_width="200dp"
           android:layout_height="200dp"
           android:src="@drawable/logo"
           android:layout_gravity="center"
           android:contentDescription="@string/descriptionLogo" 
           android:layout_weight="1"  
              />

        
          
          <Button 
              android:id="@+id/start"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:paddingTop="3dp"
              android:paddingBottom="3dp"
              android:gravity="center"
              android:textColor="#fff"
              android:background="@layout/pressed_button"
              android:text="@string/startJob"
             android:layout_weight="0"
             android:onClick="goBuoniActivity" 
             android:visibility="gone"  
              
              
              />
          
          <LinearLayout 
                 android:orientation="vertical"
                 android:layout_weight="0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 android:id="@+id/twobuttonSync"
              >
              
               <Button 
              android:id="@+id/syncInternet"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:paddingTop="3dp"
              android:paddingBottom="3dp"
              android:gravity="center"
              android:textColor="#fff"
              android:background="@layout/pressed_button"
              android:text="@string/labelSyncWithInternet"
             android:layout_weight="0"
             android:onClick="syncWithDrop"   
              
              
              />
                <Button 
               android:id="@+id/syncLocal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:paddingTop="3dp"
              android:paddingBottom="3dp"
              android:gravity="center"
              android:textColor="#fff"
              android:background="@layout/pressed_button"
              android:text="@string/labelSyncWithLocal"
             android:layout_weight="0"
             android:onClick="syncWithLocal"   
              
              
              />
              
          </LinearLayout>
          
       
          
    </LinearLayout>

</LinearLayout>
